--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
 pages:
   image: rocker/verse:4.1.0
   before_script:
+  - apt-get update && apt-get -y install pandoc r-base
   - R -e "install.packages(c('blogdown'),repos='http://cran.rstudio.com')"
   - R -e "blogdown::install_hugo('0.96.0')"
   script:
-    - R -e "rmarkdown::render_site(encoding = 'UTF-8')"
+    - R -e "blogdown::build_site()"
   artifacts:
     paths:
       - public
